# Extreme_Clangague_Exam

./: .gitignore  README.md  program.h
.metadata/: dbeaver-workspace.properties  version.ini
.metadata/.plugins/com.genuitec.eclipse.devstyle/: recent.json
.metadata/.plugins/com.genuitec.eclipse.monitor/: myeclipse-usage.properties
.metadata/.plugins/com.genuitec.eclipse.ui.common.platform/: color-definitions-fix.css
.metadata/.plugins/org.eclipse.cdt.core/: Mysql.1668083872981.pdom  PrintExam.1668007540077.pdom  eeee.language.settings.xml  eeeeee.language.settings.xml  preferences  shareddefaults.xml  ttt.1668001248766.pdom
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.launchbar.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Linux_Kernel/: note.txt
MysqlTest/: CMakeLists.txt  main.cpp
PrintExam/: .cproject  .project  Makefile  PRINT.h  PrintExam.cpp
PrintExam/.dbeaver/: project-settings.json
Thread/: README.md  thread.h
printf_exam/: print.c  print.h
(+36 files in other folders)
